file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/EF/Champs  ${TRUST_ROOT}/src/EF/fortran  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Champs  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/ThHyd/Incompressible/Cond_Lim  ${TRUST_ROOT}/src/ThHyd/Incompressible  ${TRUST_ROOT}/src/ThSol )
add_library(obj_ef_geometrie OBJECT  ${srcs} )
set(listlibs ${listlibs} ef_geometrie PARENT_SCOPE    )
add_custom_target(check_sources_ef_geometrie   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ef_geometrie" )
add_DEPENDENCIES(obj_ef_geometrie check_sources_ef_geometrie)
if(COMPIL_DYN)
  add_library(ef_geometrie SHARED   $<TARGET_OBJECTS:obj_ef_geometrie> )
  install(TARGETS ef_geometrie  DESTINATION lib)
endif(COMPIL_DYN)
