file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_ef_fortran OBJECT  ${srcs} )
set(listlibs ${listlibs} ef_fortran PARENT_SCOPE    )
add_custom_target(check_sources_ef_fortran   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ef_fortran" )
add_DEPENDENCIES(obj_ef_fortran check_sources_ef_fortran)
if(COMPIL_DYN)
  add_library(ef_fortran SHARED   $<TARGET_OBJECTS:obj_ef_fortran> )
  install(TARGETS ef_fortran  DESTINATION lib)
endif(COMPIL_DYN)
