file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don)
add_library(obj_kernel_cond_lim OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_cond_lim PARENT_SCOPE    )
add_custom_target(check_sources_kernel_cond_lim   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_cond_lim" )
add_DEPENDENCIES(obj_kernel_cond_lim check_sources_kernel_cond_lim)
if(COMPIL_DYN)
  add_library(kernel_cond_lim SHARED   $<TARGET_OBJECTS:obj_kernel_cond_lim> )
  install(TARGETS kernel_cond_lim  DESTINATION lib)
endif(COMPIL_DYN)
