file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/MEDimpl  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/Kernel/Geometrie/Decoupeur  ${TRUST_MED_ROOT}/include)
add_library(obj_kernel_geometrie OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_geometrie PARENT_SCOPE    )
add_custom_target(check_sources_kernel_geometrie   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_geometrie" )
add_DEPENDENCIES(obj_kernel_geometrie check_sources_kernel_geometrie)
if(COMPIL_DYN)
  add_library(kernel_geometrie SHARED   $<TARGET_OBJECTS:obj_kernel_geometrie> )
  install(TARGETS kernel_geometrie  DESTINATION lib)
endif(COMPIL_DYN)
