file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_LATAFILTER}/include  ${TRUST_MED_ROOT}/include  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Statistiques_temps  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie )
add_library(obj_kernel_med_impl OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_med_impl PARENT_SCOPE    )
add_custom_target(check_sources_kernel_med_impl   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_med_impl" )
add_DEPENDENCIES(obj_kernel_med_impl check_sources_kernel_med_impl)
if(COMPIL_DYN)
  add_library(kernel_med_impl SHARED   $<TARGET_OBJECTS:obj_kernel_med_impl> )
  install(TARGETS kernel_med_impl  DESTINATION lib)
endif(COMPIL_DYN)
