file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_kernel_math OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_math PARENT_SCOPE    )
add_custom_target(check_sources_kernel_math   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_math" )
add_DEPENDENCIES(obj_kernel_math check_sources_kernel_math)
if(COMPIL_DYN)
  add_library(kernel_math SHARED   $<TARGET_OBJECTS:obj_kernel_math> )
  install(TARGETS kernel_math  DESTINATION lib)
endif(COMPIL_DYN)
