file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_kernel_operateurs OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_operateurs PARENT_SCOPE    )
add_custom_target(check_sources_kernel_operateurs   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_operateurs" )
add_DEPENDENCIES(obj_kernel_operateurs check_sources_kernel_operateurs)
if(COMPIL_DYN)
  add_library(kernel_operateurs SHARED   $<TARGET_OBJECTS:obj_kernel_operateurs> )
  install(TARGETS kernel_operateurs  DESTINATION lib)
endif(COMPIL_DYN)
