file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Solveurs  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_kernel_schema_temps OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_schema_temps PARENT_SCOPE    )
add_custom_target(check_sources_kernel_schema_temps   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_schema_temps" )
add_DEPENDENCIES(obj_kernel_schema_temps check_sources_kernel_schema_temps)
if(COMPIL_DYN)
  add_library(kernel_schema_temps SHARED   $<TARGET_OBJECTS:obj_kernel_schema_temps> )
  install(TARGETS kernel_schema_temps  DESTINATION lib)
endif(COMPIL_DYN)
