file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie )
add_library(obj_kernel_statistiques OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_statistiques PARENT_SCOPE    )
add_custom_target(check_sources_kernel_statistiques   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_statistiques" )
add_DEPENDENCIES(obj_kernel_statistiques check_sources_kernel_statistiques)
if(COMPIL_DYN)
  add_library(kernel_statistiques SHARED   $<TARGET_OBJECTS:obj_kernel_statistiques> )
  install(TARGETS kernel_statistiques  DESTINATION lib)
endif(COMPIL_DYN)
