file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${MPI_INCLUDE}  ${PETSC_ROOT}/${TRUST_ARCH}${OPT}/include  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_MED_ROOT}/include)
add_library(obj_kernel_utilitaires OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_utilitaires PARENT_SCOPE    )
add_custom_target(check_sources_kernel_utilitaires   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_utilitaires" )
add_DEPENDENCIES(obj_kernel_utilitaires check_sources_kernel_utilitaires)
if(COMPIL_DYN)
  add_library(kernel_utilitaires SHARED   $<TARGET_OBJECTS:obj_kernel_utilitaires> )
  install(TARGETS kernel_utilitaires  DESTINATION lib)
endif(COMPIL_DYN)
