file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie/Interpolation_IBM  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Schemas_Temps  ${TRUST_ROOT}/src/Kernel/Solveurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/ThHyd/Dilatable/Common/Milieu  ${TRUST_ROOT}/src/ThHyd/Incompressible/Cond_Lim  ${TRUST_ROOT}/src/ThHyd/Incompressible/Equations  ${TRUST_ROOT}/src/ThHyd/Incompressible/Milieu  ${TRUST_ROOT}/src/ThHyd/Incompressible/Sources  ${TRUST_ROOT}/src/ThHyd/Incompressible/Traitement_particulier  ${TRUST_ROOT}/src/ThHyd/Incompressible  ${TRUST_ROOT}/src/ThHyd/Multiphase/Schemas_Temps )
add_library(obj_thhyd_schema_temps OBJECT  ${srcs} )
set(listlibs ${listlibs} thhyd_schema_temps PARENT_SCOPE    )
add_custom_target(check_sources_thhyd_schema_temps   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity thhyd_schema_temps" )
add_DEPENDENCIES(obj_thhyd_schema_temps check_sources_thhyd_schema_temps)
if(COMPIL_DYN)
  add_library(thhyd_schema_temps SHARED   $<TARGET_OBJECTS:obj_thhyd_schema_temps> )
  install(TARGETS thhyd_schema_temps  DESTINATION lib)
endif(COMPIL_DYN)
