file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/include/EOS  ${TRUST_ROOT}/include/CoolProp  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires)
add_library(obj_thhyd_tppi OBJECT  ${srcs} )
set(listlibs ${listlibs} thhyd_tppi PARENT_SCOPE    )
add_custom_target(check_sources_thhyd_tppi   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity thhyd_tppi" )
add_DEPENDENCIES(obj_thhyd_tppi check_sources_thhyd_tppi)
if(COMPIL_DYN)
  add_library(thhyd_tppi SHARED   $<TARGET_OBJECTS:obj_thhyd_tppi> )
  install(TARGETS thhyd_tppi  DESTINATION lib)
endif(COMPIL_DYN)
