file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ICOCOAPI}/include  ${TRUST_MEDCOUPLING_ROOT}/include  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/ICoCo  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/MEDimpl  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Statistiques_temps  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie )
add_library(obj_kernel_champs_don OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_champs_don PARENT_SCOPE    )
add_custom_target(check_sources_kernel_champs_don   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_champs_don" )
add_DEPENDENCIES(obj_kernel_champs_don check_sources_kernel_champs_don)
if(COMPIL_DYN)
  add_library(kernel_champs_don SHARED   $<TARGET_OBJECTS:obj_kernel_champs_don> )
  install(TARGETS kernel_champs_don  DESTINATION lib)
endif(COMPIL_DYN)
