file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${METIS_ROOT}/include  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_kernel_geometrie_decoup OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_geometrie_decoup PARENT_SCOPE    )
add_custom_target(check_sources_kernel_geometrie_decoup   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_geometrie_decoup" )
add_DEPENDENCIES(obj_kernel_geometrie_decoup check_sources_kernel_geometrie_decoup)
if(COMPIL_DYN)
  add_library(kernel_geometrie_decoup SHARED   $<TARGET_OBJECTS:obj_kernel_geometrie_decoup> )
  install(TARGETS kernel_geometrie_decoup  DESTINATION lib)
endif(COMPIL_DYN)
