file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${MPI_INCLUDE}  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_kernel_math_matrices OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_math_matrices PARENT_SCOPE    )
add_custom_target(check_sources_kernel_math_matrices   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_math_matrices" )
add_DEPENDENCIES(obj_kernel_math_matrices check_sources_kernel_math_matrices)
if(COMPIL_DYN)
  add_library(kernel_math_matrices SHARED   $<TARGET_OBJECTS:obj_kernel_math_matrices> )
  install(TARGETS kernel_math_matrices  DESTINATION lib)
endif(COMPIL_DYN)
