file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${MPI_INCLUDE}  ${TRUST_ROOT}/lib/src/LIBAMGX/AmgXWrapper/include  ${TRUST_ROOT}/lib/src/LIBAMGX/AmgX/include  ${CUDA_INC_PATH}  ${PETSC_ROOT}/${TRUST_ARCH}${OPT}/include  ${TRUST_ROOT}/lib/src/LIBROCALUTION/include  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_kernel_math_solveurs_sys OBJECT  ${srcs} )
set(listlibs ${listlibs} kernel_math_solveurs_sys PARENT_SCOPE    )
add_custom_target(check_sources_kernel_math_solveurs_sys   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity kernel_math_solveurs_sys" )
add_DEPENDENCIES(obj_kernel_math_solveurs_sys check_sources_kernel_math_solveurs_sys)
if(COMPIL_DYN)
  add_library(kernel_math_solveurs_sys SHARED   $<TARGET_OBJECTS:obj_kernel_math_solveurs_sys> )
  install(TARGETS kernel_math_solveurs_sys  DESTINATION lib)
endif(COMPIL_DYN)
