file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Schemas_Temps  ${TRUST_ROOT}/src/Kernel/Solveurs  ${TRUST_ROOT}/src/Kernel/Statistiques_temps  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/ThHyd/Dilatable/Common/Milieu  ${TRUST_ROOT}/src/ThHyd/Incompressible/Milieu  ${TRUST_ROOT}/src/ThHyd/Turbulence/Lois_Paroi  ${TRUST_ROOT}/src/ThHyd/Turbulence/Operateurs  ${TRUST_ROOT}/src/ThHyd/Turbulence/Modeles )
add_library(obj_thhyd_dilatable_common OBJECT  ${srcs} )
set(listlibs ${listlibs} thhyd_dilatable_common PARENT_SCOPE    )
add_custom_target(check_sources_thhyd_dilatable_common   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity thhyd_dilatable_common" )
add_DEPENDENCIES(obj_thhyd_dilatable_common check_sources_thhyd_dilatable_common)
if(COMPIL_DYN)
  add_library(thhyd_dilatable_common SHARED   $<TARGET_OBJECTS:obj_thhyd_dilatable_common> )
  install(TARGETS thhyd_dilatable_common  DESTINATION lib)
endif(COMPIL_DYN)
