file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie/Interpolation_IBM  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/ThHyd/Incompressible/Milieu  ${TRUST_ROOT}/src/ThHyd/Incompressible/Sources  ${TRUST_ROOT}/src/ThHyd/Incompressible/Traitement_particulier  ${TRUST_ROOT}/src/ThHyd/Incompressible  ${TRUST_ROOT}/src/ThSol )
add_library(obj_thhyd_incompressible_equations OBJECT  ${srcs} )
set(listlibs ${listlibs} thhyd_incompressible_equations PARENT_SCOPE    )
add_custom_target(check_sources_thhyd_incompressible_equations   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity thhyd_incompressible_equations" )
add_DEPENDENCIES(obj_thhyd_incompressible_equations check_sources_thhyd_incompressible_equations)
if(COMPIL_DYN)
  add_library(thhyd_incompressible_equations SHARED   $<TARGET_OBJECTS:obj_thhyd_incompressible_equations> )
  install(TARGETS thhyd_incompressible_equations  DESTINATION lib)
endif(COMPIL_DYN)
