file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs/Champs_Don  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Statistiques_temps  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Geometrie  ${TRUST_ROOT}/src/ThHyd/Incompressible/Equations  ${TRUST_ROOT}/src/ThHyd/Turbulence/Modeles )
add_library(obj_thhyd_turbulence_lois_paroi OBJECT  ${srcs} )
set(listlibs ${listlibs} thhyd_turbulence_lois_paroi PARENT_SCOPE    )
add_custom_target(check_sources_thhyd_turbulence_lois_paroi   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity thhyd_turbulence_lois_paroi" )
add_DEPENDENCIES(obj_thhyd_turbulence_lois_paroi check_sources_thhyd_turbulence_lois_paroi)
if(COMPIL_DYN)
  add_library(thhyd_turbulence_lois_paroi SHARED   $<TARGET_OBJECTS:obj_thhyd_turbulence_lois_paroi> )
  install(TARGETS thhyd_turbulence_lois_paroi  DESTINATION lib)
endif(COMPIL_DYN)
